--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  
-<p class="my-3 text-center">
+
+<p class="my-3 text-center text-uppercase">
   <strong><%= @forum.topic %></strong> -
   <%= @forum.question %>
 </p>
