--- a/app/views/layouts/_actuemos.html.erb
+++ b/app/views/layouts/_actuemos.html.erb
@@ -1,13 +1,16 @@
 <div class="container-fluid">
   <br>
   <div class="row">
-    <div class="col-lg-6 text-justify offset-1">
-      <h2 class="featurette-heading">Entendemos tus problemas, anhelos y estamos buscando soluciones colectivas a problemas colectivos</h2>
+    <div class="col-lg-10  offset-1 text-center">
+      <h2>ENTENDEMOS TUS PROBLEMAS Y COMPARTIMOS TUS ANHELOS</h2>
+    </div>
+    
+    <div class="col-lg-6 offset-1 text-justify">
       <br>
       <p>Somos ciudadanos comunes y corrientes, sin grandes apellidos, ni altos salarios, nos transportamos en bus o bicicleta, y al igual que tú sufrimos para acceder al sistema de salud y a un trabajo digno.</p>
       <p>También <strong>estamos mamados de los políticos de siempre</strong> y de los partidos que no entienden ni viven los problemas, sueños, y anhelos de la gente de a pie, y cuyo interés no es el bienestar colectivo, sino su propio interés personal.</p>
       <p>Esa es la razón por la que nos decidimos a realizar acciones contra dos grandes males de nuestra amada Colombia, como son  la <strong>corrupción</strong> de los que mandan y la <strong>indiferencia o impotencia</strong> de los que obedecen.</p>
-      <a class="btn btn-block btn-warning btn-lg" href="#" role="button">Quiere recibir técnicas para que actuemos</a>
+      <a class="btn btn-block btn-warning btn-lg" href="#" role="button">Quiere saber más</a>
     </div>
     <div class="col-lg-4 seamos-img">
     </div>
