--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-10">
-        <h1 class="display-4"><strong>es el momento de la gente</strong></h1>
-        <h3>vive, decide y apoya la transformación de Colombia </h3>
+        <h1 class="display-4"><strong>ES EL MOMENTO DE LA GENTE</strong></h1>
+        <h2>vive, decide y apoya la transformación de Colombia </h2>
       </div>
     </div>
   </div>
