--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
     <%= render "layouts/nav" %> 
-    <%= render "layouts/notifications" %>
+    <%# render "layouts/notifications" %>
     <%= yield %>
     <%= render "layouts/footer" %> 
   </body>
