--- a/app/views/forums/_form.html.erb
+++ b/app/views/forums/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(forum) do |f| %>
+<div class="container">
   <% if forum.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(forum.errors.count, "error") %> prohibited this forum from being saved:</h2>
@@ -11,22 +12,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :topic %>
-    <%= f.text_field :topic %>
+  <div class="form-group row">
+    <%= f.label :topic, class: "col-2 col-form-label" %>
+    <div class="col-10">
+      <%= f.text_field :topic %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :question %>
-    <%= f.text_area :question %>
-  </div>
-
-  <div class="field">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id %>
+  <div class="form-group row">
+    <%= f.label :question, class: "col-2 col-form-label" %>
+    <div class="col-10">
+      <%= f.text_area :question, class: "form-control" %>
+    </div>
   </div>
 
   <div class="actions">
     <%= f.submit %>
   </div>
+</div>
 <% end %>
