--- a/app/views/layouts/_notifications.html.erb
+++ b/app/views/layouts/_notifications.html.erb
@@ -1,5 +1,16 @@
-<% if notice %>
-  <%= notice %>
-<% elsif alert %>
-  <%= alert %>
-<% end %>
+
+
+<section id= "messages-devise">
+	<div class="container-fluid">
+	<% flash.each do |key, value| %>
+		<div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			  <span aria-hidden="true">&times;</span>
+			</button>
+			<ul>
+				<li><%= value %></li>
+			</ul>
+		</div>
+	<% end %>
+	</div>
+</section>
