--- a/app/views/pages/hablemos.html.erb
+++ b/app/views/pages/hablemos.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2 class="my-3">Quieres hacer parte del cambio y activarte en nuestra red</strong></h2>
+      <h2 class="my-3 text-center">QUIERES HACER PARTE DEL CAMBIO Y ACTIVARTE EN NUESTRA RED</strong></h2>
       <p> Si tienes vocación de servicio, estás decepcionado de la política tradicional o quieres colaborar en este proyecto, tenemos un lugar para tí en ACTUEMOS, puedes apoyarnos en cualquiera de los siguientes roles:</p>
     </div>
     <div class="col-12 col-sm-6 text-justify">
@@ -9,14 +9,14 @@
         <li class="media">
       		<%= image_tag "veedor.png", size: "64", class:"d-flex mr-3" %>
           <div class="media-body">
-            <h5 class="mt-0 mb-1">Veedor</h5>
+            <h5 class="mt-0 mb-1">VEEDOR</h5>
             <p>Denuncia irregularidades, manifiesta inconformidades o conductas sospechosas de tu comunidad o trabajo</p>
           </div>
         </li>
         <li class="media my-4">
           <%= image_tag "investigador.png", size: "64", class:"d-flex mr-3" %>
           <div class="media-body">
-            <h5 class="mt-0 mb-1">Investigador</h5>
+            <h5 class="mt-0 mb-1">INVESTIGADOR</h5>
             <p>Adelanta diferentes tipos de acciones de investigación, difusion en redes, logística, entre otros</p>
           </div>
         </li>
@@ -27,14 +27,14 @@
         <li class="media">
           <%= image_tag "gestor.png", size: "64", class:"d-flex mr-3" %>
           <div class="media-body">
-            <h5 class="mt-0 mb-1">Gestor</h5>
+            <h5 class="mt-0 mb-1">GESTOR</h5>
             <p>Administra recursos para hacer sostenible el proyecto, también puedes donar dinero o materiales</p>
           </div>
         </li>
         <li class="media my-4">
           <%= image_tag "transformador.png", size: "64", class:"d-flex mr-3" %>
           <div class="media-body">
-            <h5 class="mt-0 mb-1">Transformador</h5>
+            <h5 class="mt-0 mb-1">TRANSFORMADOR</h5>
             <p>Participa en debates para construir políticas públicas y ser multiplicador en diferentes ciudades</p>
           </div>
         </li>
@@ -46,24 +46,25 @@
 
 <form> 
   <div class="container">
-    <p>Contáctanos, si tienes dudas, quieres ser voluntario o necesitas ayuda para crear y promocionar tus videos. <strong>Siempre respondemos a todas las preguntas.</strong></p>
+    
+    <p><strong>Contáctanos</strong>, ¿tienes dudas?, ¿quieres ser voluntario pero necesitas más información?, ¿necesitas ayuda para crear y promocionar tus videos?; escribenos, siempre respondemos a todas las preguntas.</p>
     <br>
     <div class="form-group row">
       <label for="example-text-input" class="col-3 col-form-label">Nombres</label>
       <div class="col-9">
-        <input class="form-control" type="text" value="Artisanal kale" id="example-text-input">
+        <input class="form-control" type="text" placeholder="Nombre y Apellido" id="example-text-input">
       </div>
     </div>
     <div class="form-group row">
       <label for="example-email-input" class="col-3 col-form-label">Email</label>
       <div class="col-9">
-        <input class="form-control" type="email" value="bootstrap@example.com" id="example-email-input">
+        <input class="form-control" type="email" placeholder="tucorreo@example.com" id="example-email-input">
       </div>
     </div>
     <div class="form-group row">
       <label for="example-text-input" class="col-3 col-form-label">Ciudad</label>
       <div class="col-9">
-        <input class="form-control" type="text"  id="example-text-input">
+        <input class="form-control" type="text"  placeholder="Tú Ciudad" id="example-text-input" >
       </div>
     </div>
     <div class="form-group row">
