--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -27,7 +27,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "INGRESAR", new_user_session_path, class:"nav-link" %>
+            <%= link_to "CONECTARSE", new_user_session_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "REGÍSTRATE", new_user_registration_path, class:"nav-link" %>
