delete User_id in Forums

--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -1,17 +1,5 @@
 <div class="container">
-  <h2 class="my-3 text-center">Soñemos y construyamos las mejores propuestas de la gente para la gente</h2>
-  <div class="row">
-    <div class="col-md-4">
-      <%= image_tag "woman1.jpg", class:"img-fluid" %>
-    </div>
-    <div class="col-md-4">
-      <%= image_tag "man2.jpg", class:"img-fluid" %>
-    </div>
-    <div class="col-md-4">
-      <%= image_tag "woman2.jpg", class:"img-fluid" %>
-    </div>
-  </div>
-  <br>
+  <h2 class="my-3 text-center">CONSTRUYAMOS LAS PROPUESTAS DE LA GENTE PARA LA GENTE</h2>
   <p  class="text-justify">Nuestros sueños sobre el país desbordan esta realidad que los políticos corruptos nos han creado y ofrecido, 
   vivimos en una Colombia, cerrada, hostil, intolerante y excluyente. <strong>Opina sobre los principales temas que afectan nuestras vidas.</strong></p>
   <%= link_to 'New Forum', new_forum_path %>
