--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <div class="media my-4">
   <i class="fa fa-comments-o fa-3x d-flex mr-3" aria-hidden="true"></i>
   <div class="media-body">
-    <h5 class="mt-0"><%= comment.user.email %> - <%= time_ago_in_words(comment.created_at) %></h5>
+    <h5 class="mt-0"> Comentado hace - <%= time_ago_in_words(comment.created_at) %></h5>
     <%= comment.content %>
   </div>
   <div class="links">
