--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,8 +10,15 @@
         <li class="nav-item">
           <%= link_to "SOÑEMOS", forums_path, class: "nav-link" %>
         </li>
-        <li class="nav-item">
-          <%= link_to "ACTUAMOS", "/actuamos", class: "nav-link" %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="/actuamos" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          ACTUAMOS
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">VIDEOS</a>
+            <a class="dropdown-item" href="#">IMÁGENES</a>
+            <a class="dropdown-item" href="#">DOCUMENTOS</a>
+          </div>
         </li>
         <li class="nav-item">
           <%= link_to "HABLEMOS", "/hablemos", class: "nav-link" %>
@@ -27,10 +34,7 @@
           </li>
         <% else %>
           <li class="nav-item">
-            <%= link_to "CONECTARSE", new_user_session_path, class:"nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "REGÍSTRATE", new_user_registration_path, class:"nav-link" %>
+            <%= link_to "INGRESAR", new_user_session_path, class:"nav-link" %>
           </li>
         <% end %>
       </ul>
