--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -21,7 +21,7 @@ img {
 
 #cover {
   background:  linear-gradient(-255deg, rgba(255, 255, 255, 0.5) 0%, rgba(41, 43, 44, 0.5) 50%), 
-  image-url('bg-1.jpg') center top no-repeat;
+  image-url('actuemos-bg.jpg') center top no-repeat;
   background-size: cover;
   color: white;
   height: 100vh;
