--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,14 +11,7 @@
           <%= link_to "SOÑEMOS", forums_path, class: "nav-link" %>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/actuamos" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          ACTUAMOS
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">VIDEOS</a>
-            <a class="dropdown-item" href="#">IMÁGENES</a>
-            <a class="dropdown-item" href="#">DOCUMENTOS</a>
-          </div>
+          <%= link_to " ACTUAMOS", "/actuamos", class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "HABLEMOS", "/hablemos", class: "nav-link" %>
