--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,30 +1,25 @@
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+  Launch demo modal
+</button>
 
-
-  <i class="fa fa-heartbeat fa-3x" aria-hidden="true"></i>
-  <i class="fa fa-graduation-cap fa-3x" aria-hidden="true"></i>
-  <i class="fa fa-suitcase fa-3x" aria-hidden="true"></i>
-  <i class="fa fa-gavel fa-3x" aria-hidden="true"></i>
-
-
-<a href="https://icons8.com">Icon pack by Icons8</a>
-
-podemos ayudarte a crear tu video y promocionarlo.
-
-<!-- Suscripción mailchimp-->
-<section id="newsletter">
-  <div class="container"> 
-    <div class="row text-center">
-      <div class="col-10 offset-1">
-        <br>
-        <h4>Quiere recibir técnicas para que actuemos</h4>
-        <br>
-        <div class="form-group">
-          <input type="email" class="form-control col-8 offset-2 text-center" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Ingrese su e-mail">
-          <small id="emailHelp" class="form-text text-muted">Nunca compartiremos su correo electrónico con otra persona.</small>
-          <br>
-          <a class="btn btn-primary" href="#" role="button">Suscribirse</a>
-        </div>
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
-  </div>  
-</section>
+  </div>
+</div>
