--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
       <div class="col-12">
         <ul class="social list-unstyled list-inline">
          	<li class="list-inline-item"> 
-           	<a href="" class="btn btn-outline-fb btn-lg"><i class="fa fa-facebook"></i> facebook</a>
+           	<a href="https://www.facebook.com/Actuemos-266529550448786/" class="btn btn-outline-fb btn-lg"><i class="fa fa-facebook"></i> facebook</a>
           </li>
           <li class="list-inline-item"> 
            	<a href="" class="btn btn-outline-yt btn-lg"><i class="fa fa-youtube"></i> youtube</a>
