--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,29 +8,35 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto mt-2 mt-md-0">
         <li class="nav-item">
+          <%= link_to " NOSOTROS", nosotros_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "SOÑEMOS", forums_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
-          <%= link_to " ACTUAMOS", "/actuamos", class: "nav-link" %>
+        <li class="nav-item">
+          <%= link_to "VIDEOS", "/videos", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "HERRAMIENTAS", "/herramientas", class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "HABLEMOS", "/hablemos", class: "nav-link" %>
         </li>
       </ul>
-      <ul class="navbar-nav">
-        <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to 'PERFIL', edit_user_registration_path, :class => 'nav-link' %> 
-          </li>
-          <li class="nav-item">
-            <%= link_to "DESCONECTAR", destroy_user_session_path, method: :delete, class:"nav-link" %>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "INGRESAR", new_user_session_path, class:"nav-link" %>
-          </li>
-        <% end %>
-      </ul>
+      <!--<ul class="navbar-nav">-->
+      <!--  <% if user_signed_in? %>-->
+      <!--    <li class="nav-item">-->
+      <!--      <%= link_to 'PERFIL', edit_user_registration_path, :class => 'nav-link' %> -->
+      <!--    </li>-->
+      <!--    <li class="nav-item">-->
+      <!--      <%= link_to "DESCONECTAR", destroy_user_session_path, method: :delete, class:"nav-link" %>-->
+      <!--    </li>-->
+      <!--  <% else %>-->
+      <!--    <li class="nav-item">-->
+      <!--      <%= link_to "INGRESAR", new_user_session_path, class:"nav-link" %>-->
+      <!--    </li>-->
+      <!--  <% end %>-->
+      <!--</ul>-->
     </div>
   </div>
 </nav>
