--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,5 @@
 <%= render "layouts/welcome" %>
 <%= render "layouts/actuemos" %>
-<div id="forum" class="container-fluid">
-  <%# render "layouts/video1" %>
-  <%= render "layouts/video2" %>
-  <%= render "layouts/video3" %>
+<div class="container-fluid">
+  <%= render "layouts/videolist" %>
 </div>
