--- a/app/views/layouts/_notifications.html.erb
+++ b/app/views/layouts/_notifications.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-<div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
+<div class="alert alert-<%= key %> alert-dismissible fade show my-0" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
