--- a/app/views/videos/index.html.erb
+++ b/app/views/videos/index.html.erb
@@ -1,17 +1,21 @@
 <br>
-<%= link_to 'New Video', new_video_path, class: "btn btn-primary" %>
 
 <div class="container">
-<div class="row">
-  <% @videos.each do |video| %>
-  <div class="col-md-4 my-3">
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/<%= video.url %>?rel=0" allowfullscreen></iframe>
-    </div>
-      <%= link_to 'Show', video %>
-      <%= link_to 'Edit', edit_video_path(video) %>
-      <%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' } %>
-	</div>
-  <% end %>
+  <div class="row">
+    <% @videos.each do |video| %>
+    <div class="col-md-4 my-3">
+      <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="//www.youtube.com/embed/<%= video.url %>?rel=0" allowfullscreen></iframe>
+      </div>
+        <% if current_user && current_user.admin? %>
+          <%= link_to 'New Video', new_video_path, class: "btn btn-primary" %>
+          <%= link_to 'Show', video %>
+          <%= link_to 'Edit', edit_video_path(video) %>
+          <%= link_to 'Destroy', video, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
+  	</div>
+    <% end %>
+  </div>
 </div>
-</div>
+
+ 
