template leads default

--- a/app/views/layouts/_actuemos.html.erb
+++ b/app/views/layouts/_actuemos.html.erb
@@ -31,8 +31,8 @@
         </button>
       </div>
       <div class="modal-body">
-        <!--<%= render "layouts/subscriptions" %>-->
-        <%= render partial: 'leads/form', locals: { lead: @lead } %>
+        <%= render "layouts/subscriptions" %>
+        <!--<%= render partial: 'leads/form', locals: { lead: @lead } %>-->
       </div>
     </div>
   </div>
