--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -23,20 +23,17 @@
           <%= link_to "HABLEMOS", "/hablemos", class: "nav-link" %>
         </li>
       </ul>
-      <!--<ul class="navbar-nav">-->
-      <!--  <% if user_signed_in? %>-->
-      <!--    <li class="nav-item">-->
-      <!--      <%= link_to 'PERFIL', edit_user_registration_path, :class => 'nav-link' %> -->
-      <!--    </li>-->
-      <!--    <li class="nav-item">-->
-      <!--      <%= link_to "DESCONECTAR", destroy_user_session_path, method: :delete, class:"nav-link" %>-->
-      <!--    </li>-->
-      <!--  <% else %>-->
-      <!--    <li class="nav-item">-->
-      <!--      <%= link_to "INGRESAR", new_user_session_path, class:"nav-link" %>-->
-      <!--    </li>-->
-      <!--  <% end %>-->
-      <!--</ul>-->
+      <ul class="navbar-nav">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "DESCONECTAR", destroy_user_session_path, method: :delete, class:"nav-link" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "CONECTARSE", new_user_session_path, class:"nav-link" %>
+          </li>
+        <% end %>
+      </ul>
     </div>
   </div>
 </nav>
