--- a/app/views/pages/_lab.html.erb
+++ b/app/views/pages/_lab.html.erb
@@ -4,3 +4,6 @@
 <i class="fa fa-gavel fa-3x" aria-hidden="true"></i>
 
 <a href="https://icons8.com">Icon pack by Icons8</a>
+
+<%= link_to 'New Forum', new_forum_path %>
+ <%= link_to 'New Video', new_video_path, class: "btn btn-primary " %>
