--- a/app/views/pages/nosotros.html.erb
+++ b/app/views/pages/nosotros.html.erb
@@ -1,6 +1,5 @@
 <div class="container">
   <p class="my-3 text-justify">Sí, todos y todas hablamos de los múltiples problemas de nuestro país, pues bien, ya es el momento de <strong>pasar a la acción</strong> o de volver a intentarlo. Hoy es diferente, hoy hay una fisura en nuestra historia y hay una ventana de oportunidad para que nos la juguemos por nuestro país. <strong>O lo hacemos nosotr@s o nadie lo hará.</strong></p>
-
   <div id="accordion" role="tablist" aria-multiselectable="true">
     <div class="card">
       <div class="card-header" role="tab" id="headingOne">
@@ -13,11 +12,7 @@
   
       <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
         <div class="card-block">
-        <p>Nuestra propuesta es evidente, es lo que nos dice el sentido común:</p>
-        <ol>
-          <li><p>Porque no debemos permitir que los políticos profesionales sigan gobernando y robándose el país.</p></li>
-          <li><p>Y para ello debemos activarnos como sujetos políticos y juntarnos colectivamente los que queremos un país tan grande como nuestros sueños.</p></li>
-        </ol>
+          <p>Porque no debemos permitir que los políticos profesionales sigan gobernando y robándose el país.</p>
         </div>
       </div>
     </div>
@@ -31,7 +26,7 @@
       </div>
       <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
         <div class="card-block">
-          <p>Para construir un país donde todos podamos vivir bien y la felicidad no esté reservada solo para algunos apellidos. </p>
+          <p>Para construir un país donde todos podamos vivir bien y la felicidad no esté reservada solo para algunos apellidos.</p>
         </div>
       </div>
     </div>
@@ -45,11 +40,11 @@
       </div>
       <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
         <div class="card-block text-justify">
-          <p>Para responder al por qué actuamos y para conseguir la meta del para qué actuamos, nos proponemos 3 formas de acción:</p>
+          <p>Debemos activarnos como sujetos políticos y juntarnos colectivamente, para ello proponemos 3 formas de acción:</p>
     	    <ol>
-            <li><p>Actuemos desde la conciencia personal. Ya somos el cambio. En nuestra cotidianidad podemos construir país cuando no nos colamos en transmilenio, cuando recojemos los excrementos de nuestro perro, cuando respetamos al otro, cuando evitamos el atajo, cuando no vemos al otro como competencia sino como compatriota, etc.</p></li>  
-            <li><p>Actuemos desde la conciencia colectiva: actuamos con el pleno reconocimiento que el dolor ante lo injusto de nuestro país, la indignación sentida ante el abuso y el robo de los políticos profesionales y el sueño de cambio de un país para vivir mejor, no es solo individual sino que es compartido por la gran mayoría. Tu dolor es mi dolor y por ello, ante problemas colectivos, soluciones colectivas. Actuemos ha de relizar múltiples acciones virtuales y en calle con un alto contenido pedagógico para re-construir esa conciencia colectiva. Tal construcción colectiva pasa por desvelar una y otra vez que los políticos profesionales, esos que nos han gobernado, las mismas familias de siempre, no solo no van a cambiar sino que si los dejamos van a seguir desfalcando el país; pero también, de manera parela, debemos incentivar el reconocimiento de que el poder del cambio en está en nosotros mismos si es que lo asumimos como tal. El poder de ellos es grande si el nuestro es pequeño, pero si el de nosotros crece el de ellos disminuirá.</p> </li>  
-            <li><p>Actuemos con vocación de poder: la toma de conciencia colectiva solo será efectiva si asumimos el reto de llegar a los espacios de poder del Estado. Actuemos es un instrumento para cambiar las instituciones del Estado a favor de la gente común. Pero solo eso es posible si es la misma gente común, como tú, la que llega a esos espacios de poder. No necesitamos más políticos profesionales que han vivido de la política, sino de gente que haga política para servir a los demás. Si no lo hacemos nosotros, juntos, ellos no lo harán.</p></li>
+    	      <li><p><strong>Actuemos desde la conciencia personal:</strong> En nuestra cotidianidad podemos construir país cuando no nos colamos en transmilenio, cuando recojemos los excrementos de nuestro perro, cuando respetamos al otro, cuando evitamos el atajo, cuando no vemos al otro como competencia sino como compatriota, etc.</p></li>  
+            <li><p><strong>Actuemos desde la conciencia colectiva:</strong> Actuamos con el pleno reconocimiento que el dolor ante lo injusto de nuestro país, la indignación sentida ante el abuso y el robo de los políticos profesionales y el sueño de cambio de un país para vivir mejor, no es solo individual sino que es compartido por la gran mayoría. Tu dolor es mi dolor y por ello, ante problemas colectivos, soluciones colectivas. Actuemos ha de relizar múltiples acciones virtuales y en calle con un alto contenido pedagógico para re-construir esa conciencia colectiva. Tal construcción colectiva pasa por desvelar una y otra vez que los políticos profesionales, esos que nos han gobernado, las mismas familias de siempre, no solo no van a cambiar sino que si los dejamos van a seguir desfalcando el país; pero también, de manera parela, debemos incentivar el reconocimiento de que el poder del cambio en está en nosotros mismos si es que lo asumimos como tal. El poder de ellos es grande si el nuestro es pequeño, pero si el de nosotros crece el de ellos disminuirá.</p> </li>  
+            <li><p><strong>Actuemos con vocación de poder:</strong> la toma de conciencia colectiva solo será efectiva si asumimos el reto de llegar a los espacios de poder del Estado. Actuemos es un instrumento para cambiar las instituciones del Estado a favor de la gente común. Pero solo eso es posible si es la misma gente común, como tú, la que llega a esos espacios de poder. No necesitamos más políticos profesionales que han vivido de la política, sino de gente que haga política para servir a los demás. Si no lo hacemos nosotros, juntos, ellos no lo harán.</p></li>
           </ol>
         </div>
       </div>
