--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,9 @@
+<p id="notice"><%= notice %></p>
+  
 <%= form_for([@forum, @forum.comments.build], remote: true) do |form| %>
 <div class="form-group">
 	<%= form.text_area :content, size: "100x5", class: "form-control" %>
 </div>
-	<%= form.submit  class: "btn btn-primary" %>
+	<%= form.submit "Comentar", class: "btn btn-primary" %>
 <% end %>
 <br>
