--- a/app/views/pages/herramientas.html.erb
+++ b/app/views/pages/herramientas.html.erb
@@ -3,35 +3,27 @@
     <div class="col-12">
       <h2 class="my-3 text-center">INSTRUMENTOS PARA EL PROTAGONISMO CIUDADANO</strong></h2>
       <p class="text-justify">Necesitamos un conjunto de  técnicas, de herramientas, de instrumentos concretos que nos posibiliten ACTUAR  al asumir un protagonismo ciudadano desde la propia cotidianidad, sacudiéndonos de la indiferencia y generando conciencia colectiva desvelando el funcionamiento de los poderosos de nuestro país.
-</div>    
+    </div>    
+  </div>
+</div>  
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Herramienta</th>
-      <th>Descripción</th>
-      <th>Enlace</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
-  </tbody>
-</table>
+
+<div class="card">
+  <%= image_tag "mapa-poder.jpg", class:"card-img-top" %>
+  <div class="card-block">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
+</div>
+<div class="card-group">
+  <div class="card">
+    <%= image_tag "mapa-poder.jpg", class:"card-img-top", size:"256x180" %>
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-block">
+      <h4 class="card-title">Card title</h4>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+</div>
