--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container my-4">
   <div class="row d-flex justify-content-center">
     <div class="col-6">
-      <h2>Sign up</h2>
+      <h2>REGISTRARSE</h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
@@ -25,8 +25,7 @@
         </div>
       
         <div class="actions">
-          <%= f.submit "Sign up" %><br>
-          <%= render "devise/shared/links" %>
+          <%= f.submit "Registrarse" %><br>
         </div>
       <% end %>
     </div>
