--- a/app/views/layouts/_actuemos.html.erb
+++ b/app/views/layouts/_actuemos.html.erb
@@ -10,29 +10,9 @@
       <p>Somos ciudadanos comunes y corrientes, sin grandes apellidos, ni altos salarios, nos transportamos en bus o bicicleta, y al igual que tú sufrimos para acceder al sistema de salud y a un trabajo digno.</p>
       <p>También <strong>estamos mamados de los políticos de siempre</strong> y de los partidos que no entienden ni viven los problemas, sueños, y anhelos de la gente de a pie, y cuyo interés no es el bienestar colectivo, sino su propio interés personal.</p>
       <p>Esa es la razón por la que nos decidimos a realizar acciones contra dos grandes males de nuestra amada Colombia, como son  la <strong>corrupción</strong> de los que mandan y la <strong>indiferencia o impotencia</strong> de los que obedecen.</p>
-      <button type="button" class="btn btn-block btn-warning btn-lg" data-toggle="modal" data-target="#mySubscription">
-        Suscríbete, para saber más del proyecto
-      </button>
     </div>
-    <div class="col-lg-4 seamos-img">
+    <div class="col-lg-4 nosotros-img">
     </div>
   </div>
   
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="mySubscription" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Suscripción</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <%= render "layouts/subscriptions" %>
-      </div>
-    </div>
-  </div>
 </div>
