--- a/app/views/pages/herramientas.html.erb
+++ b/app/views/pages/herramientas.html.erb
@@ -5,25 +5,25 @@
       <p class="text-justify">Necesitamos un conjunto de  técnicas, de herramientas, de instrumentos concretos que nos posibiliten ACTUAR  al asumir un protagonismo ciudadano desde la propia cotidianidad, sacudiéndonos de la indiferencia y generando conciencia colectiva desvelando el funcionamiento de los poderosos de nuestro país.
     </div>    
   </div>
+  <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Tipo</th>
+          <th>Nombre</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td> <i class="fa fa-file-image-o" aria-hidden="true"></i> </td>
+          <td>Árbol de Poder - Los mismos de siempre</td>
+          <td><%= link_to "Descargar", "https://www.dropbox.com/s/qn0alrsxsypurva/mapa-poder.jpg?dl=1" %></td>
+        </tr>
+      </tbody>
+    </table>
 </div>  
 
 
-<div class="card">
-  <%= image_tag "mapa-poder.jpg", class:"card-img-top" %>
-  <div class="card-block">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-</div>
-<div class="card-group">
-  <div class="card">
-    <%= image_tag "mapa-poder.jpg", class:"card-img-top", size:"256x180" %>
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-    <div class="card-footer">
-      <small class="text-muted">Last updated 3 mins ago</small>
-    </div>
-  </div>
-</div>
+    
