--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -40,7 +40,7 @@ img {
   }
 }
 
-.seamos-img {
+.nosotros-img {
   background: image-url('act.svg');
   background-repeat: no-repeat;
   background-size: cover;
