--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,7 @@
            	<a href="https://www.facebook.com/Actuemos-266529550448786/" class="btn btn-outline-fb btn-lg"><i class="fa fa-facebook"></i> facebook</a>
           </li>
           <li class="list-inline-item"> 
-           	<a href="" class="btn btn-outline-yt btn-lg"><i class="fa fa-youtube"></i> youtube</a>
+           	<a href="https://www.youtube.com/channel/UC8hLm6T3muBlRCMjPOtX5Gw" class="btn btn-outline-yt btn-lg"><i class="fa fa-youtube"></i> youtube</a>
           </li>
           <li class="list-inline-item"> 
            	<a href="https://twitter.com/actuemosinfo" class="btn btn-outline-twitt btn-lg"><i class="fa fa-twitter"></i> twitter</a>
