--- a/app/views/layouts/_videolist.html.erb
+++ b/app/views/layouts/_videolist.html.erb
@@ -1,44 +1,17 @@
 <div class="row">
   <div class="col">
-  	<h3 class="py-5 mb-0 text-center">LA RED ACTÚA</h3>
+  	<h3 class="py-5 mb-0 text-center">VIVIMOS JUNTOS Y DECIDIMOS JUNTOS</h3>
   </div>
 </div> 
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-6">
     <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/rC9Iu5zVGrA?rel=0" allowfullscreen></iframe>
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/xSJLvgOza9g?rel=0" allowfullscreen></iframe>
     </div>
 	</div>
-  <div class="col-md-4">
+  <div class="col-md-6">
     <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fV4kqDZNSSk?rel=0" allowfullscreen></iframe>
-    </div>
-	</div>
-	<div class="col-md-4">
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/nwJ_ozn37s8?rel=0" allowfullscreen></iframe>
-    </div>
-	</div>
-</div>
-<div class="row">
-  <div class="col">
-    <h3 class="py-5 mb-0 text-center">CUANDO LA GENTE SE DECIDE A ACTUAR</h3>
-  </div>
-</div> 
-<div class="row">
-  <div class="col-md-4">
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/lQn8poFjLmo?rel=0" allowfullscreen></iframe>
-    </div>
-	</div>
-  <div class="col-md-4">
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/tsHyN9zj8_o?rel=0" allowfullscreen></iframe>
-    </div>
-	</div>
-	<div class="col-md-4">
-    <div class="embed-responsive embed-responsive-4by3">
-      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/VB6R-BgtCGM?rel=0" allowfullscreen></iframe>
+      <iframe class="embed-responsive-item" src="//www.youtube.com/embed/fs9f1ZTRCEo?rel=0" allowfullscreen></iframe>
     </div>
 	</div>
 </div>
