--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,23 +1,22 @@
 <hr class="my-3">
-<div class="clearfix"></div>
 <footer class="text-center">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12"> 
-        <p><h5>Copyright © 2017 - Actuemos │ Derechos Reservados</h5></p>
-      </div>
       <div class="col-12">
         <ul class="social list-unstyled list-inline">
          	<li class="list-inline-item"> 
-           	<a href="https://www.facebook.com/Actuemos-266529550448786/" class="btn btn-outline-fb btn-lg"><i class="fa fa-facebook"></i> facebook</a>
+           	<a href="https://www.facebook.com/Actuemos-266529550448786/" class="btn btn-outline-fb"><i class="fa fa-facebook"></i> facebook</a>
           </li>
           <li class="list-inline-item"> 
-           	<a href="https://www.youtube.com/channel/UC8hLm6T3muBlRCMjPOtX5Gw" class="btn btn-outline-yt btn-lg"><i class="fa fa-youtube"></i> youtube</a>
+           	<a href="https://www.youtube.com/channel/UC8hLm6T3muBlRCMjPOtX5Gw" class="btn btn-outline-yt"><i class="fa fa-youtube"></i> youtube</a>
           </li>
           <li class="list-inline-item"> 
-           	<a href="https://twitter.com/actuemosinfo" class="btn btn-outline-twitt btn-lg"><i class="fa fa-twitter"></i> twitter</a>
+           	<a href="https://twitter.com/actuemosinfo" class="btn btn-outline-twitt"><i class="fa fa-twitter"></i> twitter</a>
           </li>
         </ul>
+      <div class="col-12"> 
+        <p><h5>Copyright © 2017 - Actuemos │ Derechos Reservados</h5></p>
+      </div>
       </div>
     </div>
   </div>
