--- a/app/views/pages/hablemos.html.erb
+++ b/app/views/pages/hablemos.html.erb
@@ -1,46 +1,4 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h3 class="my-3 text-center">QUIERES HACER PARTE DEL CAMBIO Y ACTIVARTE EN NUESTRA RED</strong></h3>
-      <p> Si tienes vocación de servicio, estás decepcionado de la política tradicional o quieres colaborar en este proyecto, tenemos un lugar para tí en ACTUEMOS, puedes apoyarnos en cualquiera de los siguientes roles:</p>
-    </div>
-    <div class="col-12 col-sm-6 text-justify">
-      <ul class="list-unstyled">
-        <li class="media">
-      		<%= image_tag "veedor.png", size: "64", class:"d-flex mr-3" %>
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">VEEDOR</h5>
-            <p>Denuncia irregularidades, manifiesta inconformidades o conductas sospechosas de tu comunidad o trabajo</p>
-          </div>
-        </li>
-        <li class="media my-4">
-          <%= image_tag "investigador.png", size: "64", class:"d-flex mr-3" %>
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">INVESTIGADOR</h5>
-            <p>Adelanta diferentes tipos de acciones de investigación, difusion en redes, logística, entre otros</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-    <div class="col-12 col-sm-6 text-justify">
-      <ul class="list-unstyled">
-        <li class="media">
-          <%= image_tag "gestor.png", size: "64", class:"d-flex mr-3" %>
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">GESTOR</h5>
-            <p>Administra recursos para hacer sostenible el proyecto, también puedes donar dinero o materiales</p>
-          </div>
-        </li>
-        <li class="media my-4">
-          <%= image_tag "transformador.png", size: "64", class:"d-flex mr-3" %>
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">TRANSFORMADOR</h5>
-            <p>Participa en debates para construir políticas públicas y ser multiplicador en diferentes ciudades</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
+
+<%= render partial: "layouts/voluntario" %>
 
 <%= render partial: "contacts/form", locals: { contact: @contact } %>
