Admin, favicon and redirects

--- a/app/views/layouts/_voluntario.html.erb
+++ b/app/views/layouts/_voluntario.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h3 class="my-3 text-center">QUIERES HACER PARTE DEL CAMBIO Y ACTIVARTE EN NUESTRA RED</strong></h3>
-      <p> Si tienes vocación de servicio, estás decepcionado de la política tradicional o quieres colaborar en este proyecto, tenemos un lugar para tí en ACTUEMOS, puedes apoyarnos en cualquiera de los siguientes roles:</p>
+      <h3 class="my-3 text-center">¿QUIERES HACER PARTE DEL CAMBIO Y ACTIVARTE EN NUESTRA RED?</strong></h3>
+      <p>Si tienes vocación de servicio, estás decepcionado de la política tradicional o quieres colaborar en este proyecto, tenemos un lugar para tí en ACTUEMOS, puedes apoyarnos en cualquiera de los siguientes roles:</p>
     </div>
     <div class="col-12 col-sm-6 text-justify">
       <ul class="list-unstyled">
