--- a/app/views/pages/herramientas.html.erb
+++ b/app/views/pages/herramientas.html.erb
@@ -8,7 +8,7 @@
 
 <div class="card-columns">
   <div class="card">
-    <%= image_tag "arbol-poder", class:"card-img-top", size:"!60x242" %>
+    <%= image_tag "arbol-poder.jpg", class:"card-img-top", size:"!60x242" %>
     <div class="card-block">
       <h4 class="card-title">Árbol de Poder - Los mismos de siempre</h4>
       <%= link_to "Descargar", "https://www.dropbox.com/s/qn0alrsxsypurva/mapa-poder.jpg?dl=1", class:"btn btn-primary btn-block" %>
