--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>¡ACTUEMOS! | <%= @page_tittle %></title>
+    <title>¡ACTUEMOS! | <%= @page_title %></title>
     <meta name="description" content="<%= @page_description %>">
 	  <meta name="keywords" content="democracia,  politica, poder ciudadano">
     <%= csrf_meta_tags %>
